Bug 436890 - Transform Tool doesn't transform the selection
Summary: Transform Tool doesn't transform the selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2021-05-10 19:55 UTC by Tiar
Modified: 2021-05-18 06:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test file for convenience (813.63 KB, application/x-krita)
2021-05-10 19:56 UTC, Tiar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2021-05-10 19:55:10 UTC
SUMMARY
In Krita 4.4.3 and previous versions, after transforming the content on a layer inside a selection, the selection would be transformed together with the content so that after the transformation it still matches the content. Now it just stays the same it was before transformation.

STEPS TO REPRODUCE
1. Open the test file - or create your own, with content and a selection.
2. Transform the content inside the selection in a visible way.
3. Press Enter; you can even switch to another tool to confirm 100% for sure.

OBSERVED RESULT
The selection stays as it was on step 1.

EXPECTED RESULT
The selection is transformed together with the content, so the new selection matches the transformed content.

SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-prealpha (git 3241355)
 Languages: pl, pl_PL, pl
 Hidpi: true

Qt

  Version (compiled): 5.12.8
  Version (loaded): 5.12.8

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.0-58-generic
  Pretty Productname: Linux Mint 20.1
  Product Type: linuxmint
  Product Version: 20.1
  Desktop: X-Cinnamon
Comment 1 Tiar 2021-05-10 19:56:29 UTC
Created attachment 138302 [details]
Test file for convenience
Comment 2 wolthera 2021-05-10 19:59:47 UTC
Confirmed, happens with both vector and raster selections.
Comment 3 Bug Janitor Service 2021-05-14 15:42:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/843
Comment 4 Dmitry Kazakov 2021-05-18 06:16:21 UTC
Git commit 5c4568f078f6c1e217d9883edd8f7688b3ad8d5e by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 18/05/2021 at 06:16.
Pushed by dkazakov into branch 'master'.

Bugfix: Transform Tool doesn't transform selection

M  +5    -1    plugins/tools/tool_transform2/kis_tool_transform.cc
M  +17   -4    plugins/tools/tool_transform2/strokes/inplace_transform_stroke_strategy.cpp
M  +12   -3    plugins/tools/tool_transform2/strokes/inplace_transform_stroke_strategy.h

https://invent.kde.org/graphics/krita/commit/5c4568f078f6c1e217d9883edd8f7688b3ad8d5e