Bugfix: Transform Tool doesn't transform selection

BUG:436890